kubernetes/apps/media/immich/app/route.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: immich-server
spec:
  hostnames:
    - "immich.${SECRET_DOMAIN}"
  parentRefs:
    - name: internal-gateway-cilium
      namespace: network
  rules:
    - backendRefs:
        - name: immich-server
          port: 2283
      matches:
        - path:
            type: PathPrefix
            value: /
